Fix navbar-toggler to align it to the container

--- a/src/themes/default/src/scss/_header.scss
+++ b/src/themes/default/src/scss/_header.scss
@@ -18,6 +18,10 @@ $header-margin: 1.5rem 0 !default;
   );
 }
 
+.bcl-header__navbar .container {
+  position: relative;
+}
+
 .ec__header .bcl-header__project,
 .ec__header .bcl-header__navbar {
   background: $header-background;
@@ -89,7 +93,7 @@ $header-margin: 1.5rem 0 !default;
 .bcl-header .navbar-toggler {
   position: absolute;
   right: 14px;
-  bottom: calc(100% - 0.3rem);
+  top: -43px;
   border-color: $white;
 }
 
